<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity.SigninActivity"
    android:background="@drawable/drawable_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold"/>

        <TextView
        android:id="@+id/txv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

        <EditText
           android:id="@+id/edt_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:ems="10"
           android:textColor="@color/colorBlack"
           android:singleLine="true"
            android:background="@null"/>
    <View
        android:id="@+id/UnderLine1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/txv_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/password"
            android:textColor="@color/colorText"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:textColor="@color/colorBlack"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"/>
    <View
        android:id="@+id/UnderLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txv_withqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withqr"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>
      <!--  <TextView
            android:id="@+id/txv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"/>-->
    </LinearLayout>
    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/signin"
        android:textSize="20sp"
        android:background="@drawable/button_border_radius"
        android:textColor="@color/colorWhite" />
    <TextView
        android:id="@+id/txv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="15dp"/>


</LinearLayout>