<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity.SignupActivity"
    android:background="@drawable/drawable_background"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/username"
        android:textColor="@color/colorText"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:background="@null"
        android:singleLine="true"/>
    <View
        android:id="@+id/underusername"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/txv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email"
        android:textColor="@color/colorText"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:background="@null"
        android:singleLine="true"/>
    <View
        android:id="@+id/underemail"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/txv_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password"
        android:textColor="@color/colorText"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:background="@null"
        android:singleLine="true"
        android:inputType="textPassword"/>
    <View
        android:id="@+id/underpwd"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <TextView
        android:id="@+id/txvconfirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confrime"
        android:textColor="@color/colorText"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edtconfirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:background="@null"
        android:singleLine="true"
        android:inputType="textPassword"/>
    <View
        android:id="@+id/underconfirm"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">
        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/signup"
            android:textSize="20sp"
            android:background="@drawable/button_border_radius"
            android:textColor="@color/colorWhite" />
        <TextView
            android:id="@+id/txv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveaccount"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

    </LinearLayout>



</LinearLayout>